# ircfmt

./: Cargo.toml  README.md
src/: colors.rs  format.rs  lib.rs  tests.rs
